Fix ubs logo on mobile

--- a/apps/editorial_features/components/eoy/stylesheets/index.styl
+++ b/apps/editorial_features/components/eoy/stylesheets/index.styl
@@ -75,8 +75,6 @@ flex-display(justify = space-between, align = center)
   .eoy-feature__menu
     margin 0 10px
     justify-content flex-start
-    .ubs
-      margin-top 13px
     a.ubs-link span
       display none
     .article-sa-plus
